--- a/src/app/main-content/skills/skills.component.html
+++ b/src/app/main-content/skills/skills.component.html
@@ -33,7 +33,7 @@
         once I'm finished.</span
       >
     </div>
-    <div>
+    <div class="btn-wrapper">
       <a class="btn-container" (click)="scrollToSection('contact')">
         <button>Let's talk</button>
       </a>
