--- a/src/app/main-content/skills/skills.component.scss
+++ b/src/app/main-content/skills/skills.component.scss
@@ -65,24 +65,26 @@ h2 {
     }
   }
 }
-
-.btn-container {
+.btn-wrapper {
   display: none;
-  justify-content: center;
-  margin-top: 10px;
-  text-decoration: none;
-  > button {
-    font-size: 17px;
-    width: 120px;
-    height: 48px;
-    border-radius: 30px;
-    background-color: #89bcd9;
-    color: #262e34;
-    border: none;
-    transition: background-color 125ms ease-in-out;
-    &:hover {
-      background-color: #f8f5ec;
-      cursor: pointer;
+  .btn-container {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    text-decoration: none;
+    > button {
+      font-size: 17px;
+      width: 120px;
+      height: 48px;
+      border-radius: 30px;
+      background-color: #89bcd9;
+      color: #262e34;
+      border: none;
+      transition: background-color 125ms ease-in-out;
+      &:hover {
+        background-color: #f8f5ec;
+        cursor: pointer;
+      }
     }
   }
 }
@@ -104,8 +106,8 @@ h2 {
       margin: 0 auto;
     }
   }
-  .btn-container {
-    display: flex;
+  .btn-wrapper {
+    display: block;
   }
 }
 
