added missing font to buttons

--- a/src/app/main-content/projects/projects.component.scss
+++ b/src/app/main-content/projects/projects.component.scss
@@ -169,6 +169,7 @@ p {
       justify-content: space-around;
       margin-top: 32px;
       > button {
+        font-family: "Josefin Sans";
         font-size: 17px;
         width: 120px;
         height: 48px;
@@ -192,6 +193,7 @@ p {
   margin-top: 32px;
   gap: 20px;
   > button {
+    font-family: "Josefin Sans";
     font-size: 17px;
     width: 120px;
     height: 48px;
