--- a/src/app/main-content/skills/skills.component.scss
+++ b/src/app/main-content/skills/skills.component.scss
@@ -73,6 +73,7 @@ h2 {
     margin-top: 10px;
     text-decoration: none;
     > button {
+      font-family: "Josefin Sans";
       font-size: 17px;
       width: 120px;
       height: 48px;
