--- a/src/app/main-content/why-me/why-me.component.scss
+++ b/src/app/main-content/why-me/why-me.component.scss
@@ -48,6 +48,7 @@ h2 {
       margin-top: 28px;
       text-decoration: none;
       > button {
+        font-family: "Josefin Sans";
         font-size: 17px;
         width: 120px;
         height: 48px;
