minor projects section responsive change

--- a/src/app/main-content/projects/projects.component.scss
+++ b/src/app/main-content/projects/projects.component.scss
@@ -330,6 +330,9 @@ p {
 
 @media (max-width: 450px) {
   .projects-section {
+    .tab-content {
+      height: 738px;
+    }
     .project-detail {
       max-width: 280px !important;
       .image-box {
