--- a/src/app/main-content/contact/contact.component.html
+++ b/src/app/main-content/contact/contact.component.html
@@ -6,7 +6,8 @@
         >Contact me through this form, I am interested in hearing from you,
         knowing your ideas and contributing to your projects with my work.</span
       >
-      <span>Need a Frontend developer? <b>Contact me!</b></span>
+      <span>Need a Frontend developer? </span>
+      <span class="blue"><b>Let's work together!</b></span>
     </div>
     <div class="text-right">
       <div class="text-right-content">
@@ -27,6 +28,7 @@
     <div class="mail-name-container">
       <div class="input-group">
         <label
+          *ngIf="!isSmallScreen"
           for="fullName"
           [class.error]="!fullNameRef.valid && fullNameRef.touched"
         >
@@ -39,7 +41,15 @@
           id="fullName"
           type="text"
           name="fullName"
+          [placeholder]="
+            isSmallScreen
+              ? !fullNameRef.valid && fullNameRef.touched
+                ? 'Your name is required'
+                : 'Your name'
+              : ''
+          "
           [(ngModel)]="contactData.name"
+          [class.error]="!fullNameRef.valid && fullNameRef.touched"
           required
           #fullNameRef="ngModel"
           minlength="2"
@@ -47,7 +57,11 @@
       </div>
 
       <div class="input-group">
-        <label for="email" [class.error]="!emailRef.valid && emailRef.touched">
+        <label
+          *ngIf="!isSmallScreen"
+          for="email"
+          [class.error]="!emailRef.valid && emailRef.touched"
+        >
           Your email
           <span *ngIf="!emailRef.valid && emailRef.touched"> is required </span>
         </label>
@@ -55,7 +69,15 @@
           id="email"
           type="email"
           name="email"
+          [placeholder]="
+            isSmallScreen
+              ? !emailRef.valid && emailRef.touched
+                ? 'Your email is required'
+                : 'Your email'
+              : ''
+          "
           [(ngModel)]="contactData.email"
+          [class.error]="!emailRef.valid && emailRef.touched"
           required
           pattern="[a-zA-Z0-9._%+\-]+@[a-zA-Z0-9.\-]+\.[a-zA-Z]{2,}"
           #emailRef="ngModel"
@@ -63,16 +85,28 @@
       </div>
     </div>
     <div class="input-group full-width">
-      <label for="message" [class.error]="!message.valid && message.touched">
+      <label
+        *ngIf="!isSmallScreen"
+        for="message"
+        [class.error]="!message.valid && message.touched"
+      >
         Your message
         <span *ngIf="!message.valid && message.touched">is required</span>
       </label>
       <textarea
         id="message"
         name="message"
+        [placeholder]="
+          isSmallScreen
+            ? !message.valid && message.touched
+              ? 'Your message is required'
+              : 'Your message'
+            : ''
+        "
         [(ngModel)]="contactData.message"
+        [class.error]="!message.valid && message.touched"
         required
-        minlength="8"
+        minlength="4"
         rows="5"
         #message="ngModel"
       ></textarea>
@@ -81,7 +115,7 @@
     <div class="form-footer">
       <label
         class="privacy"
-        [class.error]="!privacyAccepted && contactForm.submitted"
+        [class.error]="!privacyAccepted && (privacyRef.touched || submitted)"
       >
         <input
           type="checkbox"
@@ -89,6 +123,7 @@
           [(ngModel)]="privacyAccepted"
           required
           #privacyRef="ngModel"
+          (change)="privacyRef.control.markAsTouched()"
         />
 
         <span
@@ -96,7 +131,7 @@
           [ngClass]="{
             checked: privacyAccepted,
             hover: hoverPrivacy,
-            error: !privacyAccepted && submitted
+            error: !privacyAccepted && (privacyRef.touched || submitted)
           }"
           (mouseenter)="hoverPrivacy = true"
           (mouseleave)="hoverPrivacy = false"
@@ -105,16 +140,38 @@
 
         <span class="privacy-text">
           I've read the <a href="/imprint">privacy policy</a> and agree to the
-          processing of my data as outlined.
+          processing of my data as outlined. <br />
+          <br />
+          <span
+            class="error-privacy"
+            *ngIf="!privacyAccepted && (privacyRef.touched || submitted)"
+          >
+            Please accept the privacy policy!
+          </span>
         </span>
       </label>
 
-      <button type="submit" [disabled]="!contactForm.valid || !privacyAccepted">
-        Send
-      </button>
+      <div class="btn-container">
+        <button
+          type="submit"
+          [disabled]="!contactForm.valid || !privacyAccepted"
+        >
+          Send
+        </button>
+      </div>
     </div>
   </form>
+  <div class="up-arrow-btn">
+    <img
+      (click)="scrollToTop($event)"
+      src="./assets/img/icons/up-arrow.svg"
+      alt=""
+    />
+  </div>
   <div *ngIf="showToast" class="toast-overlay">
-    <div class="toast">Message sent successfully!</div>
+    <div class="toast">
+      Message sent successfully. <br />
+      <br />Thank you!
+    </div>
   </div>
 </section>
