--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -1,7 +1,7 @@
 <footer>
   <div class="content-wrapper">
     <div class="footer-left">
-      <a href="/imprint">Legal notice</a>
+      <a href="/imprint">{{ "footer.legal" | translate }}</a>
       <div class="copyright">
         <img src="" alt="" />
         <span>© Matthias Hofer 2025</span>
