--- a/src/app/shared/header/header.component.html
+++ b/src/app/shared/header/header.component.html
@@ -11,22 +11,22 @@
         <a
           (click)="scrollToSection('why-me')"
           [class.active]="activeSection === 'why-me'"
-          >Why me</a
+          >{{ "nav.why" | translate }}</a
         >
         <a
           (click)="scrollToSection('skills')"
           [class.active]="activeSection === 'skills'"
-          >Skills</a
+          >{{ "nav.skills" | translate }}</a
         >
         <a
           (click)="scrollToSection('projects')"
           [class.active]="activeSection === 'projects'"
-          >Projects</a
+          >{{ "nav.projects" | translate }}</a
         >
         <a
           (click)="scrollToSection('contact')"
           [class.active]="activeSection === 'contact'"
-          >Contact</a
+          >{{ "nav.contact" | translate }}</a
         >
       </nav>
     </div>
