--- a/src/app/main-content/skills/skills.component.scss
+++ b/src/app/main-content/skills/skills.component.scss
@@ -75,12 +75,12 @@ h2 {
     > button {
       font-family: "Josefin Sans";
       font-size: 17px;
-      width: 120px;
       height: 48px;
       border-radius: 30px;
       background-color: #89bcd9;
       color: #262e34;
       border: none;
+      padding: 8px 20px;
       transition: background-color 125ms ease-in-out;
       &:hover {
         background-color: #f8f5ec;
