added burger menu animation

--- a/src/app/main-content/landing-page/landing-page.component.html
+++ b/src/app/main-content/landing-page/landing-page.component.html
@@ -75,7 +75,7 @@
   </div>
 </section>
 <div class="burger-menu" (click)="toggleMenu()">
-  <img src="./assets/img/icons/burger-default.svg" alt="Menu" />
+  <img [src]="currentIcon" alt="Menu icon" />
 </div>
 <div class="mobile-logo-container">
   <img src="./assets/img/icons/logo-icon.svg" alt="" />
